# Fraction

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: blank.yml  cpplint.yml
include/: Fraction.h
src/: CMakeLists.txt  Fraction.cpp
test/: CMakeLists.txt  tests.cpp
